<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_emergency__message"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".Emergency_Message"
    android:weightSum="1">

    <TextView
        android:text="@string/EMS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView22"
        android:gravity="center"
        android:textStyle="normal|bold"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:textSize="18sp" />

    <Spinner

        android:entries="@array/Emergency_Message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerEMSmsg"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp" />

    <TextView
        android:text="@string/Emergency_Conntact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView23"
        android:gravity="center"
        android:textStyle="normal|bold"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btnSelectContact"
        android:text="@string/Select" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView79"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:text="@string/Contact" />

        <TextView
            android:id="@+id/textView80"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView82"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.08"
            android:text="@string/Contact_Nr" />

        <TextView
            android:id="@+id/textView81"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:text="@string/OR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView24"
        android:gravity="center" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:text="@string/EMS11"
            android:layout_width="208dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView25"
            android:textStyle="normal|bold" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_EMS_all_contacts" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="375dp"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="match_parent"
            android:layout_height="195dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            app:srcCompat="@drawable/map" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:orientation="horizontal"
        android:layout_weight="0.27">

        <TextView
            android:id="@+id/textView83"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView84"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:id="@+id/btnEMS_Send"
        android:layout_width="272dp"
        android:layout_height="58dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button"
        android:onClick="btnSend"
        android:text="@string/Save" />
</LinearLayout>
