<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Maintenance_Report">


    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="235dp"
        android:layout_height="304dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/Image_View"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/User"
            android:gravity="center"
            tools:srcCompat="@drawable/cut_majita" />
    </LinearLayout>

    <Button
        android:id="@+id/Btn_Submit_Maintenance_Report"
        android:layout_width="137dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:textColor="@color/White"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/button_curves"
        android:text="@string/Submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Btn_Camera"
        android:layout_width="144dp"
        android:textColor="@color/White"
        android:layout_height="54dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_curves"
        android:gravity="center"
        android:text="@string/Camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="382dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

        <TextView
            android:id="@+id/textView47"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/White"
            android:text="@string/Description"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/Spinner_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/White"
            android:entries="@array/Common_Description"
            android:gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="373dp"
        android:layout_height="98dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <MultiAutoCompleteTextView
            android:id="@+id/Txt_Message_Maintenance_Report"
            android:layout_width="match_parent"
            android:layout_height="163dp"
            android:textColor="@color/White"
            android:hint="@string/Message" />
    </LinearLayout>

    <Button
        android:id="@+id/button4"
        android:textColor="@color/White"
        android:layout_width="143dp"
        android:layout_height="53dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_curves"
        android:text="@string/Upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Btn_Camera" />


</androidx.constraintlayout.widget.ConstraintLayout>