<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/northern_lights_aurora_sky"
    android:layout_height="match_parent"
    tools:context=".Select_Report">

    <Button
        android:id="@+id/btn_view_emergency_reports"
        android:layout_width="237dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="488dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_curves"
        android:text="@string/Emergency"
        android:textColor="@color/White"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_maintenace_reports"
        android:layout_width="237dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_curves"
        android:text="@string/Maintenance"
        android:textColor="@color/White"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_view_emergency_reports"
        app:layout_constraintVertical_bias="0.173" />

    <Button
        android:id="@+id/btn_view_my_emergency_reports"
        android:layout_width="237dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/button_curves"
        android:text="@string/MyEmergency"
        android:textColor="@color/White"
        app:layout_constraintBottom_toTopOf="@+id/btn_view_my_maintenace_reports"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_view_my_maintenace_reports"
        android:layout_width="237dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_curves"
        android:text="@string/MyMaintenance"
        android:textColor="@color/White"
        app:layout_constraintBottom_toTopOf="@+id/btn_view_emergency_reports"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="316dp"
        android:layout_height="193dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/business_directory_listing" />
</androidx.constraintlayout.widget.ConstraintLayout>